Fix textarea overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -165,6 +165,7 @@ footer {
 input, textarea {
     background-color: var(--radiant);
     border: 2pt var(--glow) solid;
+    width: 100%;
 }
 
 /* MEDIUM SCREENS & UP */
